--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prettier": "^2.8.8"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@faker-js/faker": "^7.6.0",
+    "express": "^4.18.2",
+    "faker": "^6.6.6"
   }
 }
